--- a/web/css/site.css
+++ b/web/css/site.css
@@ -37,9 +37,6 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-
-tr.hover td {
-   cursor: pointer;
-   background-color: rgba(0, 0, 0, 0.25);
-   /* для того что бы по клике на строку табицы открывалась ссылка*/
+tr.hover {
+   background-color: #f5f5f5;
 }
