--- a/web/css/site.css
+++ b/web/css/site.css
@@ -40,3 +40,23 @@ body {
 tr.hover {
    background-color: #f5f5f5;
 }
+
+/*
+    Для результатов поиска по фирмам (разъезжаеться блок с режимом работы)
+*/
+pre {
+    max-width: 450px;
+    background-color: inherit;
+    border:none;
+    width:90%;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    overflow-wrap: normal;
+    word-wrap: normal;
+    word-break: keep-all;
+}
