--- a/web/css/site.css
+++ b/web/css/site.css
@@ -41,6 +41,14 @@ tr.hover {
    background-color: #f5f5f5;
 }
 
+.table > tbody > tr > td {
+    padding: 0px 1px;
+}
+
+.table > thead > tr > th {
+    padding: 0px 1px;
+}
+
 /*
     Для результатов поиска по фирмам (разъезжаеться блок с режимом работы)
 */
