Модальное окно фирм теперь перетаскиваемое

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -68,3 +68,15 @@ pre {
     word-wrap: normal;
     word-break: keep-all;
 }
+
+/*
+    Для перетаскиваемых модальных окон
+*/
+.modal
+{
+    overflow: hidden;
+}
+.modal-dialog{
+    margin-right: 0;
+    margin-left: 0;
+}
