--- a/web/css/site.css
+++ b/web/css/site.css
@@ -80,3 +80,21 @@ pre {
     margin-right: 0;
     margin-left: 0;
 }
+
+.modal-dialog-fullscreen {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+.modal-content-fullscreen {
+    height: 100%;
+    border-radius: 0;
+}
+
+.ui-jqgrid .ui-jqgrid-view {
+    font-size: 17px;
+}
+#modalParts {
+    z-index: 1250;
+}
