Уплотнение таблиц резульатов

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -93,7 +93,7 @@ pre {
 }
 
 .ui-jqgrid .ui-jqgrid-view {
-    font-size: 12px;
+    font-size: 14px;
 }
 #modalParts, #modalFirm {
     z-index: 1250;
@@ -116,4 +116,10 @@ pre {
 
 .table > tbody > tr.success > td {
     background-color: #dff0d8;
+}
+
+.ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td {
+    padding: 0px;
+    margin: 0px;
+    height: auto;
 }
