--- a/web/css/site.css
+++ b/web/css/site.css
@@ -105,7 +105,7 @@ pre {
 .ui-jqgrid .ui-jqgrid-btable tbody tr.jqgrow td {
     overflow: hidden;
     white-space: pre-wrap;
-    padding-right: 2px;
+    padding-right: 0px;
     word-wrap: normal;
     overflow-wrap: normal;
 }
@@ -129,4 +129,8 @@ pre {
 */
 .table > tbody > tr.success > td {
     background-color: #dff0d8 !important;
+}
+
+.ui-jqgrid .ui-pg-button:hover {
+    padding: 0 5px;
 }
